--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ subjects:
 - !lcsh 'Iron Duke (Ship)'
 - !lcsh 'Voyages and travels'
 - !lcc 'G'
+- GITenberg
 title: "In Eastern Seas\r\nOr, the Commission of H.M.S. 'Iron Duke,' flag-ship in\
   \ China, 1878-83"
 url: http://www.gutenberg.org/ebooks/27926
